# readgenesis

./: Makefile.in  README.md  configure  configure.ac
mex/: readgenesis.mexa64  readgenesis.mexw32  readgenesis_BE.mexa64  readgenesis_BE.mexglx  readgenesis_BE.mexw32
src/: readgenesis.c
